syntax = "proto3";
package inner;
option  go_package = "/inner";

message BindSessionWithRID{
    string GateSession = 1;
    string RID         = 2;
}

message KickOutReq{
    string GateSession = 1;
    string RID         = 2;
}

message KickOutRsp{
}

// session断开,gate通知player
message GSessionClosed{
    string GateSession = 1;
}

